# gyroflow

./: .gitignore  FAQ.md  GPMF_gyro.py  LICENSE  Quaternions_temp.py  README.md  _config.yml  _version.py  adaptive_zoom.py  blackbox_extract.py  bundled_images.py  calibrate_camera.py  calibrate_fisheye_video.py  calibrate_video.py  cli.py  crisp_testing.py  devnotes.md  donate.md  download.md  estimateMotionFromVideo.py  example_integrate_gyro.py  freqAnalysis.py  gallery.md  gyro_integrator.py  gyroflow.py  gyrolog.py  images.qrc  index.md  insta360_utility.py  lens.md  low_pass_test.py  nonlinear_stretch.py  perspective_test.py  pylintrc  pyproject.toml  qt_another.py  quaternion.py  requirements.txt  smoothing_algos.py  stabilizer.py  (+1 more)
.github/: FUNDING.yml
UI_elements/: sync_ui.py
_data/: navigation.yml
_includes/: footer.html
camera_presets/: GoPro_Hero7_4K_4by3_wide_V3_test.json  calibration_preset_template.json  gopro_calib.JSON  gopro_calib2.JSON  lgg6_wide.json
gpmf/: extract.py  parse.py
guide/: index.md
test scripts/: Quaternions_temp.py  auto_crop.py  auto_crop_2.py  calibrate_camera.py  deduce_orientation.py  estimateMotionFromVideo.py  example_integrate_gyro.py  find_gyro_offset.py  fir_test.py  frame_blending.py  frame_timings.py  gyro_plot.py  gyro_plot_detect.py  imu_orientation_check.py  live_stab.py  low_pass_test.py  meshwarp.py  mpl_testing.py  multisync.py  only_undistort.py  open_camera_sensors_test.py  parallel_processing.py  parallel_sync.py  perspective_test.py  render_file.py  stabilizer2.py  sync_math.py  sync_suggestion.py  (+1 more)
(+16 files in other folders)
